# llvm-translator

./: .gitignore  CMakeLists.txt  README.md  all_in  main.ll  post
asl-translator/: .gitignore  asl-translator.opam  dune-project
asl-translator/lib/: dune  state.ll  state.ml  translate.ml
in/: adds.cap  adds.rem  addv.rem  ldr.cap  ldr.rem  ret.rem  ret2.rem  str.cap
ll/: ret.cap  ret.rem
src/: asl.cpp  capstone.cpp  context.cpp  context.h  main.cpp  remill.cpp  state.cpp  state.h  translate.h
tools/: all_in.sh  bulk.sh  env.sh  get_mnemonic.sh  glue.sh  log_checker.py  log_parser.py  main.ll  mra_mnemonics.py  post.sh  pre.sh  ptr.sh
